--- a/package.json
+++ b/package.json
@@ -1,47 +1,66 @@
 {
   "name": "moghadban",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "main": "server/server.js",
+  "engines": {
+    "node": ">=6"
+  },
   "scripts": {
-    "ng": "ng",
+    "lint": "ng lint",
     "start": "ng serve",
+    "posttest": "npm run lint",
+    "ng": "ng",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "main": "app.js"
   },
-  "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "@angular/animations": "^8.2.14",
+    "@angular/cdk": "^8.2.3",
+    "@angular/cli": "^8.3.23",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/platform-server": "^8.2.14",
+    "@angular/router": "^8.2.14",
+    "compression": "^1.0.3",
+    "cors": "^2.5.2",
+    "express": "^4.17.1",
+    "hammerjs": "^2.0.8",
+    "helmet": "^3.10.0",
+    "jquery": "^3.4.1",
+    "loopback": "^3.22.0",
+    "loopback-boot": "^2.6.5",
+    "loopback-component-explorer": "^6.2.0",
+    "loopback-connector-mongodb": "^4.2.0",
+    "moment": "^2.24.0",
+    "mongodb": "^3.5.1",
+    "mongodb-core": "^3.2.7",
+    "rxjs": "^6.5.4",
+    "serve-favicon": "^2.0.1",
+    "strong-error-handler": "^3.0.0",
+    "typescript": "^3.5.3",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.23",
-    "@angular/cli": "~8.3.23",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
-  }
+    "@angular-devkit/build-angular": "^0.803.23",
+    "@types/hammerjs": "^2.0.36",
+    "core-js": "^3.6.4",
+    "eslint": "^3.17.1",
+    "eslint-config-loopback": "^8.0.0",
+    "swagger-ui": "^3.24.3"
+  },
+  "repository": {
+    "type": "",
+    "url": ""
+  },
+  "license": "UNLICENSED",
+  "description": "moghadban",
+  "author": "Mojahed Ghadban"
 }
