--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "rxjs": "^6.5.4",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^3.0.0",
+    "tslib": "^1.10.0",
     "typescript": "^3.5.3",
     "zone.js": "^0.9.1"
   },
