--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.23",
     "@types/hammerjs": "^2.0.36",
+    "@types/jquery": "^3.3.31",
     "core-js": "^3.6.4",
     "eslint": "^3.17.1",
     "eslint-config-loopback": "^8.0.0",
